@@ -364,6 +364,10 @@ public class SOAPParametersPage extends DataSetWizardPage
 						soapParameters[i].isUsed( ) );
 			}
 		}
+		else
+		{
+			viewer.setInput( new SOAPParameter[0] );
+		}
 	}
 
 	/*
@@ -426,7 +430,7 @@ public class SOAPParametersPage extends DataSetWizardPage
 
 		for ( int i = 0; i < targets.length; i++ )
 		{
-			targets[i].setUsed( manipulated.contains( Integer.valueOf( targets[i].getId( ) ) ) );
+			targets[i].setUsed( manipulated.contains( new Integer( targets[i].getId( ) ) ) );
 		}
 
 		return targets;
@@ -439,7 +443,7 @@ public class SOAPParametersPage extends DataSetWizardPage
 
 		List manipulated = new ArrayList( );
 		for ( int i = 0; i < soapParameters.length; i++ )
-			manipulated.add( Integer.valueOf( ( (SOAPParameter) soapParameters[i] ).getId( ) ) );
+			manipulated.add( new Integer( ( (SOAPParameter) soapParameters[i] ).getId( ) ) );
 
 		return manipulated;
 	}
@@ -460,7 +464,7 @@ public class SOAPParametersPage extends DataSetWizardPage
 		initViewer( refreshParameters );
 	}
 	
-	private static class ParametersViewerSorter extends ViewerSorter
+	private class ParametersViewerSorter extends ViewerSorter
 	{
 		private boolean descent;
 		
